--- a/src/pages/Popup/Popup.scss
+++ b/src/pages/Popup/Popup.scss
@@ -15,6 +15,8 @@
   }
 }
 
+html,
+body,
 #app-container {
   width: 360px;
   height: 600px;
@@ -447,7 +449,7 @@
   padding-left: 24px;
   background-image: url('./pages/setting/images/wallet_bg.png');
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: 100% 100%;
   border-radius: 8px;
 }
 
