--- a/src/pages/Popup/Popup.scss
+++ b/src/pages/Popup/Popup.scss
@@ -364,8 +364,8 @@ body,
 }
 
 .page-title {
-  // font-family: Poppins;
-  font-style: normal;
+  font-family: Poppins;
+  // font-style: normal;
   font-weight: 700;
   font-size: 24px;
   line-height: 36px;
@@ -379,7 +379,7 @@ body,
 }
 
 .page-title2 {
-  // font-family: DMSans-Bold;
+  font-family: DMSans-Bold;
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
