--- a/src/pages/Popup/Popup.scss
+++ b/src/pages/Popup/Popup.scss
@@ -449,6 +449,15 @@ body,
     height: 36px;
     border-radius: 8px;
 
+    .icon-box-line {
+      position: absolute;
+      width: 1px;
+      height: 19px;
+      right: -9px;
+      top: 4px;
+      background: rgba(63, 70, 100, 0.1);
+    }
+
     img {
       width: 20px;
       height: 20px;
