--- a/src/pages/Popup/Popup.scss
+++ b/src/pages/Popup/Popup.scss
@@ -983,5 +983,5 @@ body,
 .adm-toast-mask .adm-toast-main-text {
   border-radius: 4px !important;
   padding: 5px !important;
-
+  top: 86% !important;
 }
