feat: 更新Inferer Label一级页面样式

--- a/src/pages/Popup/Popup.scss
+++ b/src/pages/Popup/Popup.scss
@@ -302,6 +302,12 @@ body,
     }
   }
 
+  .dataitem3 {
+    .itemleft {
+      background: #13161C;
+    }
+  }
+
   .dataitem4 {
     width: 300px;
     height: 74px;
