--- a/src/pages/Popup/Popup.scss
+++ b/src/pages/Popup/Popup.scss
@@ -457,6 +457,26 @@ body,
   -webkit-text-fill-color: transparent;
   background-clip: text;
   text-fill-color: transparent;
+
+}
+
+.title-tip {
+  width: 270px;
+  left: 10px;
+  top: 40px;
+  position: absolute;
+  background: rgba(0, 0, 0, 0.8);
+  border-radius: 4px;
+  z-index: 51;
+  padding: 8px;
+
+}
+
+.tip-list {
+  font-weight: 500;
+  font-size: 10px;
+  line-height: 150%;
+  color: #FFFFFF;
 }
 
 .page-title2 {
