--- a/src/pages/Popup/pages/components/LineChart/index.scss
+++ b/src/pages/Popup/pages/components/LineChart/index.scss
@@ -6,13 +6,13 @@
   color: #E8EAEC;
   font-weight: 500;
   padding: 2px 6px;
-  display: flex;
+  // display: flex;
   align-items: center;
-  left: 50%;
-  top: 50%;
+  // left: 50%;
+  // top: 50%;
   height: 24px;
-  margin-top: -24px;
-  margin-left: -200%;
+  // margin-top: -24px;
+  // margin-left: -200%;
   opacity: 0;
   cursor: pointer;
 }
